# lexa-kernel

./: .gitignore  Cargo.toml
examples/: async-context.rs  cli-args.rs  env-vars.rs  fetch-config.rs  logger-config.rs  logger.rs  simple.rs
examples/config/: logger.yml  my-config.yml
examples/env/: .env
examples/external_crate/: mod.rs
src/: kernel.rs  lib.rs
src/kernel/: error.rs  settings.rs
src/kernel/extension/: cli.rs  env.rs  logger.rs  mod.rs  startup.rs
src/kernel/interface/: adapter.rs  cli.rs  env.rs  mod.rs
src/logger/: mod.rs  settings.rs  signal.rs
src/macro_rules/: import.rs  mod.rs  using.rs
src/process/: mod.rs  mode.rs
