[package]
name = "lexa-kernel"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/PhiSyX/lexa-kernel"
description = "Lexa Kernel Core Application"

[dependencies]
lexa-env = "=0.1.2"
lexa-fs = { version = "=0.1.4" }
lexa-logger = { version = "=0.3.0", features = ["serde"] }
lexa-wildcard-matching = { version = "=0.1.0" }

console = { version = "^0.15" }
log = { version = "^0.4.20" }
serde = { version = "1.0.192", features = ["derive"] }
thiserror = { version = "1.0.50" }

[dev-dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "^1.34.0", features = ["macros", "rt-multi-thread"] }
